force-app/main/default/objects/OrgChartPlus__ADP_OrgChartEntity__c/OrgChartPlus__ADP_OrgChartEntity__c.object-meta.xml
<CustomObject>
    <description>Chart specific customer contact info</description>
    <label>ADP OrgChart Entity</label>
    <nameField>
        <displayFormat>OE-{00000000}</displayFormat>
        <label>Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ADP OrgChart Entities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>