force-app/main/default/objects/OrgChartPlus__ADP_OrgChartEntity__c/fields/OrgChartPlus__ChartPosX__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__ChartPosX__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ChartPosX</label>
    <precision>16</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>