force-app/main/default/objects/OrgChartPlus__ADP_OrgChartEntity__c/fields/OrgChartPlus__EntityCommon__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__EntityCommon__c</fullName>
    <label>Entity Common</label>
    <referenceTo>OrgChartPlus__ADP_OrgChartEntityCommon__c</referenceTo>
    <relationshipLabel>ADP OrgChart Entities</relationshipLabel>
    <relationshipName>ADP_OrgChart_Entities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>