force-app/main/default/objects/OrgChartPlus__ADP_OrgChartEntity__c/fields/OrgChartPlus__HideFields__c.field-meta.xml
<CustomField>
    <fullName>OrgChartPlus__HideFields__c</fullName>
    <label>HideFields</label>
    <type>TextArea</type>
</CustomField>